§0.4.484 the README stops describing an ambition and starts describing a build — every row says where it ran and what pins it
Pedro's read: "it sounds like a dream with no clear guidance of what is
possible today." He was right, and one claim was outright false.

WHAT WAS WRONG. The opener promised "KMP-first: one source set targets
JVM, Android, iOS, and WASM" — core/build.gradle.kts declares jvm() and
nothing else. No Android, iOS or WASM target exists, is built, or has
ever been tested. The modules ARE KMP-structured, which makes those
targets reachable later; that is a different sentence and the README now
says it, in the platform table, marked "not today". The opener also
named "vendor-fused-kernel custom-calls (FlashAttention v3, TPU pallas)"
as if they were capabilities: we EMIT a custom_call naming a kernel some
runtime must provide, and there is no TPU lane at all. The "Why" section
sold Android on-device training, federated learning and XR — none
certified, none started.

Beyond aspiration it was stale: 1862 tests (2336 at HEAD), "DiffKT
parity: active" (closed §0.4.433), "Layer 4.5 not started" while Phases
F, G and H landed — the :nn model layer, bf16, the serving arc, the
readable-reverse work and the one-engine cleanup were all absent. And
the status table spoke in Stage-A/Layer-2.5/§0.4.241 jargon, which means
nothing to a reader who has not lived in the ship log.

WHAT IT IS NOW, following the shape JAX and PyTorch use: identity in a
paragraph, a runnable quickstart FIRST, then "What works today" as
capability tables with a four-level legend that has teeth — CERTIFIED
(a test pins it, and the row says WHERE it ran), WRITTEN (code exists,
the end-to-end path never ran, with the reason), DESIGNED (a document,
no code), NOT PLANNED. That is the audits' CERTIFIED vs
WRITTEN-BUT-UNCERTIFIED distinction moved to the front door.

So the front page now states, among other things: a real TinyLlama-1.1B
serves on PJRT-CUDA producing 6/6 token ids identical to 